--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,11 @@ strong{
 }
 
 .ct_footer{
-    background-color: rgb(31, 36, 170);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     height: 70px;
     width: 100%;
 }
@@ -84,7 +88,7 @@ input{
 button{
     color: white;
     letter-spacing: 1px;
-    background-color: rgb(112, 86, 254);
+    background-color: hsl(223, 87%, 63%);
     padding: 10px 50px;
     border: 0;
     border-radius:30px;
@@ -96,6 +100,23 @@ button{
     margin: 50px 0;
     max-width: 100%;
 }
+
+/*Footer*/
+
+.ct_footer div i{
+    color: hsl(223, 87%, 63%);
+    margin: 0 10px 30px 0;
+}
+
+.ct_footer div span{
+    color: hsl(0, 0%, 59%);
+    font-size: 10px;
+}
+
+
+
+
+
 
 
 
