--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ strong{
 /*Contenitore*/
 
 .contenitore_principale{
-    width: 40vw;
+    width: 40%;
     margin: 50px auto;
 }
 
@@ -48,19 +48,11 @@ strong{
     align-items: center;
 }
 
-.ct_up{
-    height: 160px;
-    width: 100%;
-}
-
 .ct_footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    height: 70px;
-    width: 100%;
 }
 
 /*Struttura*
@@ -75,9 +67,11 @@ strong{
 form{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .ct_up span{
+    order: 3;
     color: red;
     font-size: 10px;
     font-style: italic;
@@ -98,6 +92,7 @@ input:invalid{
 }
 
 button{
+    order: 2;
     color: white;
     letter-spacing: 1px;
     background-color: hsl(223, 87%, 63%);
@@ -135,6 +130,55 @@ button:hover{
 .ct_footer div span{
     color: hsl(0, 0%, 59%);
     font-size: 10px;
+}
+
+@media screen and (max-width:380px) {
+
+    .contenitore_principale{
+        width: 100%;
+    }
+
+    h1{
+        padding: 0px;
+        font-size: 24px;
+    }
+
+    form{
+        display: flex;
+        margin: 0 20px;
+    }
+
+    input{
+        width: 100%;
+    }
+
+    button{
+        order: 4;
+        margin: 20px 0;
+        width: 100%;
+    }
+
+    .ct_up span{
+    margin: 10px 0 0 25%;
+    }   
+
+    .ct_down img{
+        padding: 0 20px;
+    }
+
+    .ct_footer div a i{
+    border-radius: 100%;
+    border: 0.5px solid rgb(206, 206, 206);
+    padding: 10px 23px 10px 10px;
+    }
+
+    .ct_footer div i:hover{
+    color: hsl(223, 87%, 63%);
+    background-color: white;
+    border-radius: 100%;
+    border: 0.5px solid rgb(206, 206, 206);
+    padding: 10px 23px 10px 10px;
+    }
 }
 
 
